<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.god.inventory.EditorActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/activity_editor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:padding="16dp"
            android:orientation="vertical">
            <TextView
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/product_details"/>
            <EditText
                android:id="@+id/sku_edit"
                android:hint="@string/example"
                style="@style/head_edittext"
                android:theme="@style/OrangeTheme"/>
            <EditText
                android:id="@+id/name_edit"
                android:hint="@string/product_name"
                style="@style/head_edittext"
                android:theme="@style/OrangeTheme"/>
            <AutoCompleteTextView
                android:id="@+id/supplier_autocomplete"
                style="@style/head_edittext"
                android:hint="@string/supplier"
                android:theme="@style/OrangeTheme"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/Product_information"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/qty_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="30sp"
                    android:hint="@string/qty"/>
                <Button
                    android:id="@+id/sale_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sale_minus"
                    android:layout_gravity="center_vertical"/>
                <Button
                    android:id="@+id/order_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_plus"
                    android:layout_gravity="center_vertical"/>
                <Button
                    android:id="@+id/order_more_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_more"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Ruppees"
                    android:textSize="30sp"/>
                <EditText
                    android:id="@+id/price_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="30sp"
                    android:hint="@string/price"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/picture"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:transitionName="product_image"/>
            <Button
                android:id="@+id/take_picture"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/take_picture"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>